Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidOperator.ru
/? Error Léxico, salida: operador inváldio
&